@@ -23,6 +23,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #13248: Remove obsolete argument "max_buffer_size" of BufferedWriter
+  and BufferedRWPair, from the io module.
+
 - Issue #13248: Remove obsolete argument "version" of argparse.ArgumentParser.
 
 - Issue #14814: implement more consistent ordering and sorting behaviour
